--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,50 @@
-# Authentication
-AUTH_SECRET="iflow-chatbot-secret-key-2024-11-08-super-secure-random-string"
+# Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
+AUTH_SECRET=****
 
-# PostgreSQL Database
-POSTGRES_URL="postgresql://openaigc:odysseywarsaw@192.168.1.16:5432/iflow_chatbot"
+# The following keys below are automatically created and
+# added to your environment when you deploy on Vercel
 
-# Redis
-REDIS_URL="redis://root:odysseywarsaw@192.168.1.16:6379"
+# Instructions to create an AI Gateway API key here: https://vercel.com/ai-gateway
+# API key required for non-Vercel deployments
+# For Vercel deployments, OIDC tokens are used automatically
+# https://vercel.com/ai-gateway
+AI_GATEWAY_API_KEY=****
 
-# iFlow Configuration
-IFLOW_WORKSPACE_DIR="/var/workspaces"
-IFLOW_DEFAULT_MODEL="minimax-m2"
-IFLOW_DEFAULT_PERMISSION_MODE="yolo"
 
-# iFlow API Configuration (从 ~/.iflow/settings.json 获取)
-IFLOW_API_KEY="sk-******"
-IFLOW_BASE_URL="https://apis.iflow.cn/v1"
+# Instructions to create a Vercel Blob Store here: https://vercel.com/docs/vercel-blob
+BLOB_READ_WRITE_TOKEN=****
 
-# Optional - if you have an iFlow API key
-# IFLOW_API_KEY="your-api-key-here"
+# Instructions to create a PostgreSQL database here: https://vercel.com/docs/postgres
+POSTGRES_URL=****
 
-# Vercel (optional for local dev)
-# AI_GATEWAY_API_KEY=****
-# BLOB_READ_WRITE_TOKEN=****
+
+# Instructions to create a Redis store here:
+# https://vercel.com/docs/redis
+REDIS_URL=****
+
+# ============================================================================
+# iFlow CLI SDK Configuration
+# ============================================================================
+
+# iFlow workspace directory (where all user workspaces are stored)
+# Default: /var/workspaces
+# Each workspace will be created as: /var/workspaces/iflow_cli_{workspace_uuid}
+IFLOW_WORKSPACE_DIR=/var/workspaces
+
+# iFlow API key (if required by your iFlow CLI setup)
+# Obtain from: https://iflow.ai or your iFlow CLI configuration
+IFLOW_API_KEY=****
+
+# Default AI model for new workspaces
+# Options: MiniMax-M2 | Qwen3-Coder-Plus | DeepSeek-V3.2 | GLM-4.6 | Kimi-K2-0905
+# Default: MiniMax-M2
+IFLOW_DEFAULT_MODEL=MiniMax-M2
+
+# Default permission mode for new workspaces
+# Options: default | autoEdit | yolo | plan
+# - default: Requires confirmation for each operation
+# - autoEdit: Auto-executes edit operations
+# - yolo: Auto-executes all operations
+# - plan: Creates execution plan first
+# Default: yolo
+IFLOW_DEFAULT_PERMISSION_MODE=yolo
